# OSEDUC

./: .env.example  .gitignore  Cargo.toml  PROPOSAL.md  README.md  REFERENCE_CREDITS.md  compose.yaml
.github/workflows/: ci.yml
crates/oseduc-api/: Cargo.toml
crates/oseduc-api/src/: config.rs  lib.rs  main.rs  router.rs
crates/oseduc-core/: Cargo.toml
crates/oseduc-core/src/: knowledge.rs  lib.rs  student.rs  tutor.rs
crates/oseduc-llm/: Cargo.toml
crates/oseduc-llm/src/: config.rs  lib.rs  provider.rs
crates/oseduc-policy/: Cargo.toml
crates/oseduc-policy/src/: lib.rs
crates/oseduc-store/: Cargo.toml
crates/oseduc-store/migrations/: 20260629000100_knowledge_graph.sql  20260629000200_add_teaching_context.sql  20260629000300_student_progress.sql  20260629000400_tutor_interactions.sql
crates/oseduc-store/src/: config.rs  lib.rs  repository.rs  seed.rs
data/knowledge/: rcore-v3-rust-seed.json
docs/: DESIGN_DRAFT.md
frontend/learning-console/: app.js  index.html  package.json  server.mjs  styles.css
scripts/: smoke_backend.sh
