[workspace]
members = [
    "crates/oseduc-api",
    "crates/oseduc-core",
    "crates/oseduc-llm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Joshua912815/OSEDUC"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
