[package]
name = "oseduc-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
oseduc-core = { path = "../oseduc-core" }
oseduc-llm = { path = "../oseduc-llm" }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
