[package]
name = "oseduc-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
oseduc-core = { path = "../oseduc-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
